added a instruction label

--- a/src/index.html
+++ b/src/index.html
@@ -494,6 +494,7 @@
 
         <div class="project js-projects">
           <div class="project__list-wrapper js-project-list-wrapper">
+            <span class="label-drag">// Drag</span>
             <div class="project__list-item-pos js-list-item-pos"></div>
             <div class="cursor js-cursor-projects hide">
               <img
@@ -517,7 +518,7 @@
               <li class="project__title" data-key="3">PeopleCounter</li>
               <li class="project__title" data-key="4">MyPage</li>
               <li class="project__title" data-key="5">Philosofy</li>
-              <li class="project__title" data-key="6">EventManagement dApp</li>
+              <li class="project__title" data-key="6">EventMgmt dApp</li>
             </ul>
           </div>
 
