modified to dynamically fill contents

--- a/src/index.html
+++ b/src/index.html
@@ -510,34 +510,32 @@
             </div>
 
             <ul class="project__list js-project-list">
-              <li class="project__title" data-key="0">Artista</li>
-              <li class="project__title" data-key="1">SnapBot</li>
-              <li class="project__title" data-key="2">
-                Gaze Pointer Controller
-              </li>
-              <li class="project__title" data-key="3">PeopleCounter</li>
-              <li class="project__title" data-key="4">MyPage</li>
-              <li class="project__title" data-key="5">Philosofy</li>
-              <li class="project__title" data-key="6">EventMgmt dApp</li>
+              <!-- To be filled dynamically following template -->
+              <!-- <li class="project__title" data-key="idx">Title</li>-->
             </ul>
           </div>
 
-          <div class="project__desc">
-            <div class="project__name">EventManagement dApp</div>
-            <div class="project__about">
+          <div class="project__desc js-project-desc">
+            <div
+              class="project__name js-project-name"
+              data-label="EventManagement"
+            >
+              EventManagement dApp
+            </div>
+            <div class="project__about js-project-about">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </div>
-            <div class="project__tools">
+            <div class="project__tools js-project-tools">
               <div class="project__tools-label">// Built with</div>
-              <ul class="project__tools-list">
+              <ul class="project__tools-list js-tools-list">
                 <li class="project__tool">Node.js</li>
                 <li class="project__tool">Heroku</li>
               </ul>
             </div>
-            <div class="project__links">
+            <div class="project__links js-project-links">
               <div class="project__links-label">// Links</div>
-              <ul class="project__links-list">
+              <ul class="project__links-list js-links-list">
                 <li class="project__link">
                   <a href="" target="__blank">Github</a>
                 </li>
