replaced dummy texts

--- a/src/index.html
+++ b/src/index.html
@@ -374,24 +374,92 @@
                 <div class="skills__skill-desc js-skill-desc">
                   <div class="skills__skill-texts js-skill-texts">
                     <div class="skills__skill-text hide">
-                      WEB&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet,
-                      consectetur adipiscing elit, sed do eiusmod tempor
-                      incididunt ut labore et dolore magna aliqua.
+                      I'm an experienced full - stack web developer and can
+                      design modern, clean & aesthetic web apps with clean code
+                      that feature :
+                      <ul>
+                        <li>Responsiveness across devices</li>
+                        <li>Minimalistic Design</li>
+                        <li>Fast & Optimized</li>
+                        <li>Scalable & Encapsulated Code</li>
+                        <li>Engaging Motions</li>
+                      </ul>
                     </div>
                     <div class="skills__skill-text hide">
-                      ANDRD&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet,
-                      consectetur adipiscing elit, sed do eiusmod tempor
-                      incididunt ut labore et dolore magna aliqua.
+                      I can make native apps on the Android platform, both in
+                      Java & Kotlin language, though I'd prefer Kotlin much
+                      more. I am capable of delivering apps featuring :
+                      <ul>
+                        <li>Clean Material Design</li>
+                        <li>Recommended Latest Components</li>
+                        <li>Responsive With Screen Widths</li>
+                        <li>Fast & Memory Efficient Performance</li>
+                        <li>MVVM Architecture</li>
+                      </ul>
                     </div>
                     <div class="skills__skill-text hide">
-                      ML&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet,
-                      consectetur adipiscing elit, sed do eiusmod tempor
-                      incididunt ut labore et dolore magna aliqua.
+                      I've been studying Machine/Deep Learning from numerous
+                      sources & have deployed trained models in multiple
+                      applications. So, it's not a black box for me. Interested
+                      in deploying Deep Learning models on edge devices like
+                      smartphones.
+
+                      <ul>
+                        See :
+                        <li>
+                          <a
+                            href="https://confirm.udacity.com/JXSUER2D"
+                            target="_blank"
+                            >AI with Python (Udacity)</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://www.coursera.org/account/accomplishments/verify/A33K6LK4QFPD?utm_campaign=copybutton_certificate&utm_medium=certificate&utm_source=link"
+                            target="_blank"
+                            >Machine Learning (Coursera)</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://www.coursera.org/account/accomplishments/specialization/RWWMMU4WHRDU"
+                            target="_blank"
+                            >Deep Learning (Coursera)</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://www.coursera.org/account/accomplishments/specialization/3UVXWMR7Y3KF"
+                            target="_blank"
+                            >TensorFlow Developer (Coursera)</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://confirm.udacity.com/EC4927NS"
+                            target="_blank"
+                            >Intel Edge AI (Udacity)</a
+                          >
+                        </li>
+                      </ul>
                     </div>
                     <div class="skills__skill-text hide">
-                      ETH&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet,
-                      consectetur adipiscing elit, sed do eiusmod tempor
-                      incididunt ut labore et dolore magna aliqua.
+                      I've invested a significant time on learning dApp
+                      development on ethereum blockchain, especially completing
+                      ConsenSys's Blockchain Bootcamp & CryptoZombies tutorials.
+                      Looking forward to developing something good & useful on
+                      it.
+
+                      <ul>
+                        See :
+                        <li>
+                          <a
+                            href="https://drive.google.com/file/d/1pSPEPZY4WC3a_9A7CLs9HgWF_U-wv-48/view"
+                            target="_blank"
+                            >Blockchain Developer Bootcamp</a
+                          >
+                        </li>
+                      </ul>
                     </div>
                   </div>
                   <div
@@ -455,6 +523,7 @@
                     <div class="skills__skill-tool-item">solidity</div>
                     <div class="skills__skill-tool-item">infura</div>
                     <div class="skills__skill-tool-item">truffle</div>
+                    <div class="skills__skill-tool-item">ganache</div>
                     <div class="skills__skill-tool-item">ipfs</div>
                   </div>
                 </div>
