changed to suitable tags, removed dummy data

--- a/src/index.html
+++ b/src/index.html
@@ -272,7 +272,7 @@
             <div class="text-appear__line-bottom js-line-bottom"></div>
           </div>
 
-          <div class="text-about-para">
+          <p class="text-about-para">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -280,7 +280,7 @@
             reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum.
-          </div>
+          </p>
 
           <svg class="low-poly-pic js-low-poly-pic" viewBox="0 0 256 256"></svg>
 
@@ -374,9 +374,11 @@
                 <div class="skills__skill-desc js-skill-desc">
                   <div class="skills__skill-texts js-skill-texts">
                     <div class="skills__skill-text hide">
-                      I'm an experienced full - stack web developer and can
-                      design modern, clean & aesthetic web apps with clean code
-                      that feature :
+                      <p>
+                        I'm an experienced full - stack web developer and can
+                        design modern, clean & aesthetic web apps with clean
+                        code that feature :
+                      </p>
                       <ul>
                         <li>Responsiveness across devices</li>
                         <li>Minimalistic Design</li>
@@ -386,9 +388,11 @@
                       </ul>
                     </div>
                     <div class="skills__skill-text hide">
-                      I can make native apps on the Android platform, both in
-                      Java & Kotlin language, though I'd prefer Kotlin much
-                      more. I am capable of delivering apps featuring :
+                      <p>
+                        I can make native apps on the Android platform, both in
+                        Java & Kotlin language, though I'd prefer Kotlin much
+                        more. I am capable of delivering apps featuring :
+                      </p>
                       <ul>
                         <li>Clean Material Design</li>
                         <li>Recommended Latest Components</li>
@@ -398,12 +402,12 @@
                       </ul>
                     </div>
                     <div class="skills__skill-text hide">
-                      I've been studying Machine/Deep Learning from numerous
-                      sources & have deployed trained models in multiple
-                      applications. So, it's not a black box for me. Interested
-                      in deploying Deep Learning models on edge devices like
-                      smartphones.
-
+                      <p>
+                        I've been studying Machine/Deep Learning from numerous
+                        sources & have deployed trained models in multiple
+                        applications. Interested in deploying Deep Learning
+                        models on edge devices like smartphones.
+                      </p>
                       <ul>
                         See :
                         <li>
@@ -444,12 +448,13 @@
                       </ul>
                     </div>
                     <div class="skills__skill-text hide">
-                      I've invested a significant time on learning dApp
-                      development on ethereum blockchain, especially completing
-                      ConsenSys's Blockchain Bootcamp & CryptoZombies tutorials.
-                      Looking forward to developing something good & useful on
-                      it.
-
+                      <p>
+                        I've invested a significant time on learning dApp
+                        development on ethereum blockchain, especially
+                        completing ConsenSys's Blockchain Bootcamp &
+                        CryptoZombies tutorials. Looking forward to developing
+                        something good & useful on it.
+                      </p>
                       <ul>
                         See :
                         <li>
@@ -613,29 +618,20 @@
               <div
                 class="project__name js-project-name"
                 data-label="EventManagement"
-              >
-                EventManagement dApp
-              </div>
-              <div class="project__about js-project-about">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </div>
+              ></div>
+              <p class="project__about js-project-about"></p>
               <div class="project__tools js-project-tools">
                 <div class="project__tools-label">// Built with</div>
                 <ul class="project__tools-list js-tools-list">
-                  <li class="project__tool">Node.js</li>
-                  <li class="project__tool">Heroku</li>
+                  <!-- <li class="project__tool">tool-name</li> -->
                 </ul>
               </div>
               <div class="project__links js-project-links">
                 <div class="project__links-label">// Links</div>
                 <ul class="project__links-list js-links-list">
-                  <li class="project__link">
-                    <a href="" target="__blank">Github</a>
-                  </li>
-                  <li class="project__link">
-                    <a href="" target="__blank">Twitter</a>
-                  </li>
+                  <!-- <li class="project__link">
+                    <a href="" target="__blank">Link label</a>
+                  </li> -->
                 </ul>
               </div>
             </div>
@@ -673,10 +669,10 @@
                 >thenvnsahu<br />&nbsp;@gmail.com</a
               >
 
-              <div class="contact__text">
+              <p class="contact__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </div>
+              </p>
               <div class="contact__sign"></div>
             </div>
 
