replaced dummy data

--- a/src/index.html
+++ b/src/index.html
@@ -273,13 +273,13 @@
           </div>
 
           <p class="text-about-para">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            Hello! I'm Naveen Sahu, a developer from India. I enjoy creating
+            things that breathe on beautifully written code, whether that be
+            websites, apps or anything similar. While building, my aim is always
+            to write clutter-free code & a cleaner, easy on eyes UI. <br />
+            <br />
+            When not buried into the screen, you can find enjoying a book, a non
+            - fiction most probably. Or upgrading my current skill-set.
           </p>
 
           <svg class="low-poly-pic js-low-poly-pic" viewBox="0 0 256 256"></svg>
@@ -331,7 +331,7 @@
           </div>
 
           <div class="skills-wrapper js-skills-wrapper invisible">
-            <div class="cursor js-cursor">
+            <div class="cursor js-cursor hide">
               <img
                 class="cursor__arrow cursor__arrow--left"
                 src="images/arrow-left-2.svg"
@@ -500,9 +500,7 @@
                     class="skills__skill-tools-container skills__skill-tools-container--android js-skill-tools-container hide"
                   >
                     <div class="skills__skill-tool-item">android studio</div>
-                    <div class="skills__skill-tool-item">
-                      jetpack components
-                    </div>
+                    <div class="skills__skill-tool-item">jetpack library</div>
                     <div class="skills__skill-tool-item">kotlin</div>
                     <div class="skills__skill-tool-item">java</div>
                     <div class="skills__skill-tool-item">material design</div>
@@ -670,10 +668,10 @@
               >
 
               <p class="contact__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                I love to build awesome aesthetic stuff. Currently, I'm
+                available for freelance work. Hit me up & we'll talk.
               </p>
-              <div class="contact__sign"></div>
+              <div class="contact__sign">Naveen Sahu</div>
             </div>
 
             <div class="contact__links js-contact-links">
