added background to skills section

--- a/src/index.html
+++ b/src/index.html
@@ -297,6 +297,12 @@
         </div>
         <div class="section__content section__content--skills">
           <div class="text-hover-prompt js-text-hover-prompt hide">show me</div>
+          <div class="bg-wrapper js-skills-bg">
+            <img src="images/brain.svg" alt="brain" />
+            <img src="images/code.svg" alt="code" />
+
+            <img src="images/computer.svg" alt="computer" />
+          </div>
 
           <div class="text-appear text-appear--text-skills js-text-skills">
             <div class="text-appear__line-top js-line-top"></div>
