added instructive label

--- a/src/index.html
+++ b/src/index.html
@@ -351,6 +351,7 @@
               <div class="cursor__progress-bar js-cursor-progress hide"></div>
             </div>
             <div class="skills js-skills-slider">
+              <span class="label-drag-skills">// Drag</span>
               <div class="back-btn js-skills-back-btn">
                 <img src="images/close.svg" alt="close button" />
               </div>
